# jira-access

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  JiraQueryExecutor.py  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
jira_access/: BasicAuth.py  BearerAuth.py  JiraQueryExecutor.py  _jira_client.py  _types.py  basic_auth.py  bearer_auth.py  jira_query_executor.py  xray.py
tests/: conftest.py  test_connection.py  test_xray.py
tests/data/: .gitignore  create_new_test_execution.json
